[package]
name = "Disk_Maid"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0.0"
anyhow = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rfd = "0.14"
walkdir = "2.5"
wildmatch = "2.2"
glob = "0.3"
open = "5.0"
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"